--- a/langsharp-core.csproj
+++ b/langsharp-core.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>langsharp_core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
